# src/domains/air-quality/AirQualityController.ts
@@ -1,5 +1,5 @@
-import { Request, Response } from 'express';
-import AirQualityService from './AirQualityService';
+import { Request, Response } from "express";
+import AirQualityService from "./AirQualityService";
 
 export default class AirQualityController {
   constructor(private readonly airQualityService: AirQualityService) {}
@@ -7,6 +7,8 @@ export default class AirQualityController {
   async getNearestCity(req: Request, res: Response) {
     const latitude = parseFloat(req.query.latitude as string);
     const longitude = parseFloat(req.query.longitude as string);
-    res.json(await this.airQualityService.getByNearestCity(latitude, longitude));
+    res.json(
+      await this.airQualityService.getByNearestCity(latitude, longitude)
+    );
   }
 }
