# src/domains/air-quality/routes.ts
@@ -1,16 +1,19 @@
-import express from 'express';
-import { ApplicationContract } from '../../core/ApplicationContract';
-import AirQualityController from './AirQualityController';
-import AirQualityService from './AirQualityService';
-import { IqairApiFactory } from '../../infrastructure/airq-api/IqairApiFactory';
+import express from "express";
+import { ApplicationContract } from "../../core/ApplicationContract";
+import AirQualityController from "./AirQualityController";
+import AirQualityService from "./AirQualityService";
+import { IqairApiFactory } from "../../infrastructure/airq-api/IqairApiFactory";
 
 export default async function (app: ApplicationContract): Promise<void> {
- const iqairApiFactory =  new IqairApiFactory();
+  const iqairApiFactory = new IqairApiFactory();
   const iqairApi = iqairApiFactory.create();
   const service = new AirQualityService(iqairApi);
   const controller: AirQualityController = new AirQualityController(service);
   const router: express.Router = express.Router();
-  router.get('/api/airq/nearest-city', controller.getNearestCity.bind(controller));
+  router.get(
+    "/api/iqair/nearest-city",
+    controller.getNearestCity.bind(controller)
+  );
 
   (app as ApplicationContract).getApplicationGateWay().getServer().use(router);
 }
